# Velox

./: .gitignore  LICENSE.md  README.md  ResourceDashboard.tsx  TRAINING_DEPENDENCIES_FIX.md  build_output.txt  build_output_progress_fix.txt  build_output_rename.txt  build_output_train_fix.txt  index.html  package-lock.json  package.json  repro_load.py  requirements.txt  test_broken.jsonl  tsc_output.txt  vite.config.ts
src/: AnnotationEditor.tsx  App.tsx  DataCollectionPanel.tsx  ResourceDashboardNew.tsx  UtilitiesPanel.tsx  types.ts
src-tauri/: .taurignore.gitignore_global  .tauriignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: collect_templates.py  convert_hf_to_gguf.py  convert_lora_to_gguf.py  convert_unsloth_gguf.py  data_collecter.py  dataset_loader.py  debug_dataset.py  debug_env.py  debug_model_load.py  debug_transformers.py  deduplication.py  download_datasets.py  download_models.py  fix_dataset.py  fix_unsloth_install.py  generation_engine.py  huggingface_manager.py  list_repo_files.py  llamacppInstallationHandler.ps1  process_data.py  screenshot_tool.py  setup_environment.py  setup_torch.py  setup_unsloth.ps1  tools.py  train.py  trainer.py  transformers_server.py  verify_install.py
src-tauri/src/: commands.rs  commands_temp.rs  constants.rs  hardware.rs  lib.rs  main.rs  models.rs  python.rs  utils.rs
src/components/: Button.tsx  Canvas.tsx  CanvasPanel.tsx  Card.tsx  DownloadProgressIndicator.tsx  ErrorBoundary.tsx  GlobalDropZone.tsx  Header.tsx  InfoTooltip.tsx  Input.tsx  (+16 more)
(+19 files in other folders)
