[package]
name = "velox"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "velox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2.0.0", features = [] }

[dependencies]
tauri-plugin-opener = "^2"
tauri-plugin-shell = "^2"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-fs = "^2" # Added tauri-plugin-fs
tauri-plugin-drag = "2" # For drag-out functionality
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"
sysinfo = "0.33"

# Add these:
zip = "0.6"
bytes = "1"
flate2 = "1.0"  # For decompressing .tar.gz files
tar = "0.4"     # For extracting .tar archives
tauri = { version = "2.0.0", features = [] } # Ensure you are on v2 based on your config
tokio-stream = { version = "0.1.17", features = ["fs", "io-util"] }

